<resources>
    <string name="app_name">Avenue</string>
    <string name="home">首页</string>
    <string name="nearby">附近</string>
    <string name="me">我的</string>
    <string name="rebate">返利</string>

    <string name="nearby_merchant_name">请输入商户名称</string>
    <string name="nearby_site">胜古家园</string>
    <string name="nearby_Near_the_location">附近旺铺</string>
    <string name="nearby_food_recommendation">超人气美食推荐</string>
    <string name="nearby_food_west">小可爱西点</string>
    <string name="nearby_food_Italian_restaurant">巴贝拉意式餐厅</string>
    <string name="nearby_food_barbecue">金釜山自助烤肉</string>
    <string name="nearby_Anzhenmen">[安贞门]</string>
    <string name="nearby_Gourmet">美食</string>
    <string name="nearby_entertainment">休闲娱乐</string>
    <string name="nearby_serve">生活服务</string>
    <string name="nearby_grogshop">酒店</string>
    <string name="nearby_all">全部</string>


    <string name="beijing">北京</string>
    <string name="title_edit">麻辣小龙虾</string>
    <string name="wangputuijian">旺铺推荐</string>
    <string name="nuanxinfuli">暖&#160;心&#160;福&#160;利</string>
    <string name="xinyonghu">新&#160;用&#160;户&#160;优&#160;惠</string>
    <string name="dadaoshike">大&#160;道&#160;时&#160;刻</string>
    <string name="xingongneng">新&#160;功&#160;能&#160;上&#160;线</string>

    <string name="login_title">注册</string>
    <string name="et_phone">请输入手机号</string>
    <string name="yanzhengma">请输入验证码</string>
    <string name="et_password">请输入密码</string>

    <string name="btn_send">获取验证码</string>

    <string name="txt_login_password">设置密码</string>
    <string name="txt_login_spang">我已经阅读并同意大道用户协议</string>

    <string name="btn_login">登录</string>
    <string name="text_details_2">$45/人</string>
    <string name="text_details_3">积分率15%</string>

    <string name="text_details_4">粗陶罐（安贞桥东点）</string>
    <string name="text_details_5">15210024204</string>
    <string name="text_details_6">每满100元减15元，周一至周日10.00-21:00可用</string>
    <string name="text_details_7">120元双人情侣套餐(限一份)</string>
    <string name="text_details_8">商品详情</string>
    <string name="text_details_9">每满100元减15元，周一至周日10.00-21:00可用每满100元减15元，周一至周日10.00-21:00可用每满100元减15元，周一至周日10.00-21:00可用每满100元减15元，周一至周日10.00-21:00可用每满100元减15元，周一至周日10.00-21:00可用每满100元减15元，周一至周日10.00-21:00可用每满100元减15元，周一至周日10.00-21:00可用每满100元减15元，周一至周日10.00-21:00可用每满100元减15元，周一至周日10.00-21:00可用每满100元减15元，周一至周日10.00-21:00可用</string>
    <string name="text_details_10">营业时间:  </string>
    <string name="text_details_11">10:00-21:00</string>
    <string name="text_details_12">WIFI</string>
    <string name="text_details_13">停车</string>
    <string name="get_verification_code">重新发送</string>
    <string name="txt_mine_log">密码登录</string>
    <string name="txt_mine_log1">忘记密码</string>


    <string name="login_title">注册</string>
    <string name="et_phone">请输入手机号</string>
    <string name="yanzhengma">请输入验证码</string>

    <string name="btn_send">获取验证码</string>

    <string name="txt_login_password">设置密码</string>
    <string name="txt_login_spang">我已经阅读并同意大道用户协议</string>
    <string name="btn_login">登录</string>
    <string name="fujin">附近商铺</string>
</resources>
