<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_startpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         />

    <RelativeLayout
        android:id="@+id/rlayout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentTop="true"
        >


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:padding="@dimen/x5"
                android:src="@mipmap/xiala" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                android:text="@string/login_title"
                android:textSize="25sp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/img_login_ico"
            android:layout_width="@dimen/x186"
            android:layout_height="@dimen/x148"
            android:layout_below="@id/relativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/x60"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x88"
            android:layout_below="@+id/img_login_ico"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginRight="@dimen/x30"
            android:layout_marginTop="@dimen/x60"
            android:background="@null"
            android:hint="@string/et_phone"
            android:paddingLeft="@dimen/x30"

            />

        <ImageView
            android:id="@+id/imageView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/et_login"
            android:layout_alignTop="@+id/et_login"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="@dimen/x60"
            android:layout_marginTop="10dp"
            android:src="@mipmap/shouji" />

        <LinearLayout
            android:id="@+id/llayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_login"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginTop="@dimen/x20"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/x30">

            <EditText
                android:id="@+id/et_login_verify"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x88"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/yanzhengma"
                android:textColor="@color/c999999" />

            <Button
                android:id="@+id/action_login_send"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x88"
                android:layout_marginRight="@dimen/x30"
                android:layout_toRightOf="@id/et_login_verify"
                android:layout_weight="2"
                android:paddingLeft="@dimen/x20"
                android:text="@string/btn_send" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x88"
            android:layout_below="@id/llayout"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginRight="@dimen/x30"
            android:layout_marginTop="@dimen/x20"
            android:background="@null"
            android:hint="@string/txt_login_password"
            android:paddingLeft="@dimen/x30"

            android:password="true" />

        <ImageView
            android:id="@+id/img_login_eye"
            android:layout_width="@dimen/x42"
            android:layout_height="@dimen/x22"
            android:layout_alignBottom="@+id/edt_login_password"
            android:layout_alignLeft="@+id/imageView"

            android:layout_marginBottom="13dp"
            android:layout_marginRight="@dimen/x60"
            android:src="@mipmap/biyan" />

        <CheckBox
            android:id="@+id/chk_login_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/img_login_eye"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginTop="@dimen/x32" />

        <TextView
            android:id="@+id/txt_login_spang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/chk_login_select"
            android:layout_alignBottom="@+id/chk_login_select"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@+id/chk_login_select"
            android:text="@string/txt_login_spang"
            android:textSize="@dimen/x28" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_login_spang"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginRight="@dimen/x30"
            android:layout_marginTop="@dimen/x32"
            android:text="@string/btn_login"

            android:textColor="@color/colorAccent" />

    </RelativeLayout>


</RelativeLayout>
