<?xml version="1.0" encoding="utf-8"?><!--CoordinatorLayout滚动效果-->
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--首页显示的地图-->
        <com.baidu.mapapi.map.MapView
            android:clickable="true"
            android:id="@+id/nearby_map"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x260"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />


        <TextView
            android:id="@+id/nearby_map_mylocation"
            android:layout_width="@dimen/x220"
            android:layout_height="@dimen/x72"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/x36"
            android:drawableLeft="@mipmap/fujindingwei_fill"
            android:drawableRight="@mipmap/xiala"
            android:gravity="center"
            android:text="@string/nearby_site"
            android:textColor="@color/c333333" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="@dimen/x66"
            android:layout_height="@dimen/x66"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical" />


        <RelativeLayout
            android:layout_width="@dimen/x66"
            android:layout_height="@dimen/x66"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/x36"
            android:background="@color/cffffff"
            android:gravity="center_vertical">
            <!--android:layout_marginTop="7dp"-->

            <ImageView
                android:id="@+id/nearby_map_seek"
                android:layout_width="@dimen/x30"
                android:layout_height="@dimen/x30"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/searchs" />

            <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:src="@mipmap/gengduo" />-->
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nearby_txt_Near_the_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x20"
            android:gravity="center"
            android:text="@string/nearby_Near_the_location"
            android:textColor="@color/c000000"
            android:textSize="@dimen/x36" />

        <RelativeLayout
            android:layout_width="@dimen/x88"
            android:layout_height="@dimen/x88"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/nearby_txt_Near_the_location"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/gengduo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nearby_txt_Near_the_location"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/x62"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nearby_txt_Near_the_location"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@+id/nearby_txt_food_recommendation"
                android:src="@mipmap/hengxiang" />

            <TextView
                android:id="@+id/nearby_txt_food_recommendation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nearby_txt_Near_the_location"
                android:text="@string/nearby_food_recommendation"
                android:textColor="@color/c999999" />

            <ImageView
                android:layout_width="@dimen/x62"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nearby_txt_Near_the_location"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/nearby_txt_food_recommendation"
                android:src="@mipmap/hengxiang" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginTop="@dimen/x28"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/x224"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="@dimen/x224"
                android:layout_height="@dimen/x218"
                android:background="@mipmap/fff" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x14"
                android:text="@string/nearby_food_west"
                android:textColor="@color/c333333" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x15"
                android:text="@string/nearby_Anzhenmen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/x224"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/x224"
                android:layout_height="@dimen/x218"
                android:background="@mipmap/fff" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x14"
                android:text="@string/nearby_food_Italian_restaurant"
                android:textColor="@color/c333333" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt2"
                android:layout_marginTop="@dimen/x15"
                android:text="@string/nearby_Anzhenmen" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/x224"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/x224"
                android:layout_height="@dimen/x218"
                android:background="@mipmap/fff" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView1"
                android:layout_marginTop="@dimen/x14"
                android:text="@string/nearby_food_barbecue"
                android:textColor="@color/c333333" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt3"
                android:layout_marginTop="@dimen/x15"
                android:text="@string/nearby_Anzhenmen" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x20"
        android:layout_marginTop="@dimen/x53"
        android:background="@color/cF2F4F5" />

    <RadioGroup
        android:id="@+id/nearby_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x88"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/nearby_radiobutton_gourmet"
            android:layout_width="@dimen/x150"
            android:layout_height="@dimen/x88"
            android:layout_weight="1"
            android:background="@drawable/nearby_radiogroup"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/nearby_Gourmet"
            android:textColor="@drawable/main_textcolor_selector" />

        <RadioButton
            android:id="@+id/nearby_radiobutton_entertainment"
            android:layout_width="@dimen/x150"
            android:layout_height="@dimen/x88"
            android:layout_weight="1"
            android:background="@drawable/nearby_radiogroup"
            android:button="@null"
            android:gravity="center"
            android:text="@string/nearby_entertainment"
            android:textColor="@drawable/main_textcolor_selector" />

        <RadioButton
            android:id="@+id/nearby_radiobutton_serve"
            android:layout_width="@dimen/x150"
            android:layout_height="@dimen/x88"
            android:layout_weight="1"
            android:background="@drawable/nearby_radiogroup"
            android:button="@null"
            android:gravity="center"
            android:text="@string/nearby_serve"
            android:textColor="@drawable/main_textcolor_selector" />

        <RadioButton
            android:id="@+id/nearby_radiobutton_grogshop"
            android:layout_width="@dimen/x150"
            android:layout_height="@dimen/x88"
            android:layout_weight="1"
            android:background="@drawable/nearby_radiogroup"
            android:button="@null"
            android:gravity="center"
            android:text="@string/nearby_grogshop"
            android:textColor="@drawable/main_textcolor_selector" />

        <RadioButton
            android:id="@+id/nearby_radiobutton_all"
            android:layout_width="@dimen/x150"
            android:layout_height="@dimen/x88"
            android:layout_weight="1"
            android:background="@drawable/nearby_radiogroup"
            android:button="@null"
            android:gravity="center"
            android:text="@string/nearby_all"
            android:textColor="@drawable/main_textcolor_selector" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x4"
        android:background="@color/cF2F4F5" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>